# online-conference-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  .test.env  config.py  entrypoint.sh  main.py
app/api/: auth.py  courses.py  dependencies.py  rooms.py  routers.py  schedules.py  users.py
app/db/: __init__.py  db.py
app/migrations/: env.py
app/migrations/versions/: 19d1a4bc5df3_null.py  6c5c07793d42_init.py  ced8e8ee9ef1_owner_id.py  f7b126f177c4_all_models.py 
app/models/: courses.py  rooms.py  schedules.py  users.py  users_courses.py
app/repositories/: courses.py  rooms.py  schedules.py
app/schemas/: base.py  courses.py  rooms.py  schedules.py  tokens.py  users.py
app/services/: auth.py  courses.py  rooms.py  schedules.py  users.py
app/utils/: auth.py  oauth_bearer.py  repository.py  roles.py
front/: package-lock.json  package.json
front/src/: index.css  index.js
front/src/components/App/: App.js  useToken.js
front/src/components/CourseCreate/: CourseCreate.css  CourseCreate.js
front/src/components/CoursePage/: CoursePage.css  CoursePage.js
front/src/components/Login/: Login.css  Login.js
front/src/components/MainPage/: MainPage.css  MainPage.js
front/src/components/Room/: Room.js
front/src/components/RoomCreate/: RoomCreate.css  RoomCreate.js
front/src/components/RoomEnter/: RoomEnter.css  RoomEnter.js
front/src/components/Schedule/: Schedule.css  Schedule.js
front/src/components/Signup/: Signup.css  Signup.js
front/src/components/UserPage/: UserPage.css  UserPage.js
(+4 files in other folders)
